--- a/src/App.css
+++ b/src/App.css
@@ -1,67 +1,223 @@
-body{
-  background-color: rgb(223, 157, 157)
-}
-
 .App {
   text-align: center;
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 40vmin;
+  pointer-events: none;
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
+.App-link {
+  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
-.front-Page{
+
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.row{
+  background-color: white;
+  width: 101%;
   
-  height: 100%;
-  width: 100%;
-  color: aqua;
 }
-.Heading_main{
-  padding: 100px;
+.container-fluid{
+  background-color: lightgreen;
+  border: 1px grey solid;
+  }
+
+html {
+  font-family: "Lucida Sans", sans-serif;
 }
-.FinalOrder{
-  background: rgb(50, 51, 49);
-background: linear-gradient(90deg,  rgb(50, 51, 49) 0%, rgba(96,224,173,1) 35%, rgba(0,212,255,1) 100%);
-  width: 500px;
-  height: 500px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+.panel-img{
+  width: 200px;
+  height: 40px;;
+}
+.dashboard{
+  
   text-align: center;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  
+}
+.menu{
+  box-shadow: 0 3px 3px rgba(0,0,0,6), 0 3px 4px rgba(0,0,0,3); 
+  height: 600px;
+  text-align: center;
+  margin-left: 0px;
+  background-color: lightgreen;
+  color: #ffffff;
+}
+.menu ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.menu li {
+  border-radius: 25px;
+  font-size:18px;
+  padding: 75px;
+  margin-bottom: 7px;
+  background-color: green;
+  color: #ffffff;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.menu li:hover {
+  background-color: yellowgreen;
+}
+.aside {
+  color:#ffffff;
+ margin-right: 20px; 
+  margin-left: 50px;
+  margin-top: 20px;
+  background-color:wheat;
+  padding: 25px;
+  height: auto;
+  box-shadow: 0 3px 3px rgba(0,0,0,6), 0 3px 4px rgba(0,0,0,3);
+  text-align: center;
+  font-size: 14px;
+  
+}
+
+
+/* For mobile phones: */
+[class*="col-"] {
+  width: 100%;
+  padding: 10px;
+}
+
+@media only screen and (min-width: 600px) {
+  /* For tablets: */
+  .col-s-1 {width: 8.33%;}
+  .col-s-2 {width: 16.66%;}
+  .col-s-3 {width: 25%;}
+  .col-s-4 {width: 33.33%;}
+  .col-s-5 {width: 38.66%;}
+  .col-s-6 {width: 50%;}
+  .col-s-7 {width: 58.33%;}
+  .col-s-8 {width: 66.66%;}
+  .col-s-9 {width: 73%;}
+  .col-s-10 {width: 83.33%;}
+  .col-s-11 {width: 92.66%;}
+  .col-s-12 {width: 100%;}
+}
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 20.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 50.33%;}
+  .col-8 {width: 62.66%;}
+  .col-9 {width: 68%;}
+  
 
 }
-button:active{
-  background:olive;
+
+.table{
+border-radius:15px;
+margin-top:10px; 
+background-color: whitesmoke; 
+
 }
-button:focus{
-  background:olive;
+.img-circle{
+  margin-left: 0px;
+  width:50px; 
+  height:35px;
 }
-.container{
-  height: 100%;
-  width: 100%;
+
+
+
+.E-fucn-con{
+  display: flex;  
+  padding-top: 10px; 
 }
-.orderSlip{
-font-family: "Courier New", Courier, monospace
+
+.E-fucn-con1{
+  height: 60px; 
+  display: flex; 
+  flex-basis: 73%; 
+  justify-content: space-around; 
+}
+
+.e-func-inherit{
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  display: flex;
+   height: 60px; 
+   flex-basis: 30%; 
+   background-color:whitesmoke; 
+   border-radius:5px;
+}
+.slider{
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  display: flex;
+   padding: 70px; 
+   width: 215px; 
+   background-color:green; 
+   
+}
+.slider:hover{
+    background-color: yellowgreen;
+}
+.drop{
+  flex-basis: 25%; 
+}
+.drop-btn{
+  padding-left: 30%; 
+  padding-top:4px;
+}
+.clear{
+  clear: both;
+}
+.reg-form {
+  float: right; 
+  width: 90px; 
+  height: 40px; 
+  margin:0%; 
+  padding: 0%;
+}
+.model-logo{
+  height:140px; 
+  width:180px; 
+  margin-left: 140px;  
+  border-radius: 25px;
+}
+.model-form{
+  width:600px;
+}
+.btn{
+  background-color: green;
+}
+.btn:hover{
+  background-color: yellowgreen;
+  
+}
+.search{
+  float:right;
 }
